<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/ColorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".RecipeDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgRecipe"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/recipeHeight"
            android:layout_weight="1.5"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            android:src="@drawable/alootikki" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ColorPrimary"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.125"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewRecipeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.125"
                    android:padding="@dimen/ownerPadding"
                    android:text="@string/recipeName"
                    android:textAlignment="center"
                    android:textColor="@color/ColorAccent"
                    android:textSize="@dimen/textSize"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.125"
                android:background="@color/ColorPrimary"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewOwner"
                    android:layout_width="@dimen/owner_width"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingTop="@dimen/paddingTop"
                    android:text="By: "
                    android:textAlignment="textEnd"
                    android:textColor="@color/ColorWhiteGreyish"
                    android:textSize="@dimen/edit_textSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/owner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/paddingTop"
                    android:text="@string/ownerName"
                    android:textAlignment="textStart"
                    android:textColor="@color/ColorWhiteGreyish"
                    android:textSize="@dimen/edit_textSize"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/layout_height"
                android:background="@color/ColorWhiteGreyish" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/message"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawablePadding="@dimen/drawablePadding"
                    android:textColor="@color/ColorAccent"
                    app:srcCompat="@android:drawable/ic_menu_send" />

                <Space
                    android:layout_width="@dimen/space_width"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/download"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawablePadding="@dimen/drawablePadding"
                    android:scaleType="center"
                    android:textColor="@color/ColorAccent"
                    app:srcCompat="@android:drawable/stat_sys_download" />

                <Space
                    android:layout_width="@dimen/space_width"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/locationOnMap"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawablePadding="@dimen/drawablePadding"
                    android:scaleType="center"
                    android:textColor="@color/ColorAccent"
                    app:srcCompat="@android:drawable/ic_dialog_map" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/layout_height"
        android:background="@color/ColorWhiteGreyish" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/txtIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ingredients"
                android:textAlignment="textStart"
                android:textColor="@color/ColorWhiteGreyish"
                android:textSize="@dimen/textSize"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/layout_height"
                android:background="@color/ColorWhiteGreyish" />

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ingredients1"
                android:textAlignment="textStart"
                android:textColor="@color/ColorAccent"
                android:textSize="@dimen/edit_textSize"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/layout_height"
                android:background="@color/ColorGrey" />

            <TextView
                android:id="@+id/txtSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/steps"
                android:textAlignment="textStart"
                android:textColor="@color/ColorWhiteGreyish"
                android:textSize="@dimen/textSize"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/layout_height"
                android:background="@color/ColorWhiteGreyish" />

            <TextView
                android:id="@+id/recipeSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/steps1"
                android:textAlignment="textStart"
                android:textColor="@color/ColorAccent"
                android:textSize="@dimen/edit_textSize"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>